grafana/node-exporter-deployement.yaml
---
apiVersion: apps/v1
# TODO: changer le Deployement en DaemonSet
kind: Deployment
metadata:
  name: node-exporter
  namespace: grafana
  labels:
    app: node-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      namespace: grafana
      labels:
        app: node-exporter
    spec:
      containers:
      - name: node-exporter
        image: quay.io/prometheus/node-exporter:latest
        ports:
        - name: node-expo-port
          containerPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: node-expo-ci
  namespace: grafana
spec:
  type: ClusterIP
  selector:
    app: node-exporter
  ports:
  - name: node-exporter-ci-port
    protocol: TCP
    port: 9100
    targetPort: node-expo-port
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: node-expo-lb
#   namespace: grafana
#   labels:
#     app: node-exporter
# spec:
#   type: LoadBalancer
#   selector:
#     app: node-exporter
#   ports:
#   - name: node-exporter-lb-port
#     protocol: TCP
#     port: 9100
#     targetPort: node-expo-port
