grafana/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      namespace: grafana
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        ports:
        - name: prometheus-port
          containerPort: 9090
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prom-storage
      volumes:
      - name: prom-storage
        hostPath:
          path: /etc/prometheus
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-cluster-ip
  namespace: grafana
spec:
  type: ClusterIP
  selector:
    # ON NE MET PAS LES NAMESPACES EN SELECTOR
    app: prometheus # 🔥 Sélectionne les pods avec ce label
  ports:
  - name: prometheus-port-cluster-ip
    protocol: TCP
    port: 9090
    targetPort: prometheus-port
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: prometheus-load-balancer
#   namespace: grafana
# spec:
#   type: LoadBalancer
#   selector:
#     app: prometheus # 🔥 Sélectionne les pods avec ce label
#   ports:
#   - protocol: TCP
#     port: 9090
#     targetPort: prometheus-port
