grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
  namespace: grafana
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.altaif4.fr`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
  tls:
    certResolver: myresolver
